# bls_solidity_python

./: .gitignore  .prettierrc.json  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: python.yml
contracts/: BLS.sol  BN256G2.sol  TestBLS.sol
tests/: test_bls.py
