[tool.poetry]
name = "bls_solidity_python"
version = "0.1.0"
description = ""
authors = ["Chih Cheng Liang <chihchengliang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
eth-brownie = "^1.10.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
