[tool.poetry]
name = "bls_solidity_python"
version = "0.1.0"
description = ""
authors = ["Chih Cheng Liang <chihchengliang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
eth-brownie = "^1.10.6"
pipx = "^0.15.4"
py_ecc = "^4.0.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.2.0"}
eth-utils = "^1.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
