[tool.poetry]
name = "bls_solidity_python"
version = "0.1.0"
description = ""
authors = ["Chih Cheng Liang <chihchengliang@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.10"

[tool.poetry.dev-dependencies]
eth-brownie = "^1.17.2"
pipx = "^0.15.4"
py_ecc = "^4.0.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.3.1"}
eth-utils = "^1.10.0"
pytest = "^6.2.5"
black = "^22.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
